Fix missing spacing between toolbar groups

--- a/indico/web/client/styles/modules/_category.scss
+++ b/indico/web/client/styles/modules/_category.scss
@@ -86,7 +86,6 @@
 #category-toolbar {
   flex: 0 1 auto;
   display: flex;
-  gap: 0.5em;
   flex-wrap: wrap;
   justify-self: flex-end;
   width: fit-content;
